--- a/src/components/Designer/RightPanel/Properties/Block/PropertiesInput/InputLabel/InputLabel.module.scss
+++ b/src/components/Designer/RightPanel/Properties/Block/PropertiesInput/InputLabel/InputLabel.module.scss
@@ -1,35 +1,7 @@
 @import "/src/style/variables.scss";
+@import "/src/style/mixins.scss";
 
 
-.input_container {
-    display: grid;
-    grid-template-columns: 11fr 1fr;
-    align-content: center;
-
-
-
-    input {
-        display: flex;
-        justify-self: left;
-
-    }
-
-    button {
-        font-size: 0.7rem;
-        width: 30px;
-        background-color: $color-node-nav-icon;
-        color: white;
-        text-align: center;
-        padding: 5px;
-
-        &:hover {
-            background-color: red;
-        }
-
-    }
-
-}
-
-.classData {
-    display: none !important;
+.grid_item {
+    @include section_grid_item;
 }
