--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -8,11 +8,12 @@ $bg-node-nav-btn : rgb(236, 236, 236);
 $bg-top-menu-btn-default: rgb(74, 148, 190);
 $bg-top-menu-btn-hover: rgb(55, 109, 139);
 $bg-top-menu-btn-active: rgb(39, 74, 94);
-
+$bg-delete-btn: rgb(230, 56, 56);
 //--COLORS--
 $color-node-nav-container-header: rgb(114, 114, 114);
 $color-node-nav-btn: rgb(31, 31, 31);
 $color-list-border: rgb(238, 238, 238);
+$color-list-label: #727272;
 
 //icons colors
 $color-node-nav-icon: rgb(35, 124, 175);
@@ -27,6 +28,7 @@ $shadow-inset: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5
 //--FONTS--
 $font-node-nav-list: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 $font-node-nav-header: 'BlockMenuHeader';
+
 
 //--BREAKPOINTS--
 $breakpoint-xs: 576px;
