added intellisence for custom props

--- a/src/components/Designer/RightPanel/Properties/CustomProperties/AddCustomProperty/AddCustomProperty.module.scss
+++ b/src/components/Designer/RightPanel/Properties/CustomProperties/AddCustomProperty/AddCustomProperty.module.scss
@@ -2,6 +2,7 @@
 @import "/src/style/mixins.scss";
 
 .wrapper {
+    position: relative;
 
     .add_property_container {
         display: flex;
@@ -33,7 +34,7 @@
             }
         }
 
-        .value_wrapper {
+        .param_value {
             position: relative;
 
         }
