implemented load/save draft

--- a/src/components/Designer/TopMenu/LeftList/LeftList.module.scss
+++ b/src/components/Designer/TopMenu/LeftList/LeftList.module.scss
@@ -1,23 +1,54 @@
 @import "/src/style/variables.scss";
 @import "/src/style/mixins.scss";
-;
 
-.nav_list {
-  display: flex;
-  justify-content: center;
-  padding-left: 20px;
-  margin: 0;
 
-  .nav_list_item {
-    list-style: none;
-    margin-right: 30px;
-    font-family: $font-node-nav-header;
-    font-weight: bold;
-    padding: 0;
-    cursor: pointer;
+.wrapper{
+  grid-column: 2;
+  .nav_list {
+    display: flex;
+    justify-content: center;
+   
+    li{
+      list-style: none;
+    }
+  
+    .nav_list_item {
+     
+      margin-right: 30px;
+      font-family: $font-node-nav-header;
+      font-weight: bold;
+      padding: 0;
+      cursor: pointer;
+    }
+  
+    .server_button{
+      position: absolute;
+      left: 20px;
+      top: 6px;
+     
+  
+      button{
+        margin-left: 20px;
+        background-color: $bg-top-menu-btn-default;
+        padding: 5px 10px;
+        border: 0;
+        border-radius: 5px;
+        color: white;
+        font-family: $font-node-nav-header;
+  
+        font-weight: bold;
+  
+        &:hover{
+            background-color: $bg-top-menu-btn-hover;
+        }
+  
+        transition: background-color 0.2s ease-in-out;
+    }
+    }
+  }
+  
+  .view_section_hidden {
+    display: none;
   }
 }
 
-.view_section_hidden {
-  display: none;
-}
