--- a/src/components/Designer/TopMenu/LeftList/FlowsList/FlowsList.module.scss
+++ b/src/components/Designer/TopMenu/LeftList/FlowsList/FlowsList.module.scss
@@ -2,79 +2,60 @@
 @import "/src/style/mixins.scss";
 
 .container {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    padding: 20px;
-    border: 1px solid #e4e4e4;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  border: 1px solid #e4e4e4;
+  border-radius: 5px;
+  width: 800px;
+  padding-top: 0;
+  z-index: 1000;
+  font-family: $font-node-nav-list;
+  color: $color-node-nav-container-header;
+
+  h3 {
+    text-align: center;
+  }
+
+  li {
+    cursor: pointer;
+  }
+
+  .body {
     border-radius: 5px;
-    width: 500px;
-    padding-top: 0;
-    z-index: 1000;
-    font-family: $font-node-nav-list;
-    color: $color-node-nav-container-header;
+    padding: 10px;
+    margin-bottom: 10px;
 
-    h3 {
-        text-align: center;
+    display: grid;
+    grid-template-columns: 6fr 6fr;
+    gap: 10px;
 
+    .grid_element {
+      background-color: #f5f3f3;
+      padding: 10px;
+      border-radius: 5px;
     }
 
+   
+  }
 
-    .body {
-        background-color: #fafbfc;
-        border-radius: 5px;
-        padding: 10px;
-        margin-bottom: 10px;
+  .footer {
+    display: flex;
+    justify-content: end;
 
-        table {
-            width: 100%;
-
-
-
-            thead {
-                font-style: italic;
-
-                th {
-                    text-align: left;
-                    padding-bottom: 20px;
-                }
-
-
-                margin-bottom: 20px;
-
-            }
-
-            tbody {
-
-
-                .flow_name {
-                    font-weight: bold;
-
-                    color: $color-node-nav-icon;
-                    cursor: pointer;
-                }
-            }
-        }
+    button {
+      background-color: $bg-top-menu-btn-default;
+      border: 0;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-left: 20px;
+      padding-right: 20px;
+      border-radius: 5px;
+      margin-left: 5px;
+      color: white;
     }
-
-    .footer {
-
-        display: flex;
-        justify-content: end;
-
-
-        button {
-            background-color: $bg-top-menu-btn-default;
-            border: 0;
-            padding-top: 10px;
-            padding-bottom: 10px;
-            padding-left: 20px;
-            padding-right: 20px;
-            border-radius: 5px;
-
-            color: white;
-        }
-    }
+  }
 }
