--- a/src/components/Modals/ModalWindow.module.scss
+++ b/src/components/Modals/ModalWindow.module.scss
@@ -41,6 +41,11 @@
     display: flex;
     justify-content: center;
 
+    span{
+        font-weight: bolder;
+        margin-left: 5px;
+        margin-right: 5px;
+    }
     input[type="text"] {
         margin-left: 0;
         border: 1px solid rgb(160, 157, 157);
@@ -55,10 +60,28 @@
     .buttons_wrapper {
         display: flex;
         justify-content: flex-end;
-        gap: 10px;
+        gap: 10px; 
 
         button {
             border-radius: 5px;
         }
     }
+
+    .input_wrapper{
+        display: grid;
+        grid-template-columns: 4fr 8fr;
+        justify-content: start;
+        margin-bottom: 20px;
+        label{
+            margin-right: 5px;
+        }
+        input{
+            border-radius: 5px;
+            border: 1px solid gray;
+            outline: none;
+         
+        }
+    }
+
+    
 }
