--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -2,38 +2,38 @@
 @import '../../style/variables.scss';
 
 
-$gradient-color-1: #cabd97;
-$gradient-color-2: #a1c9d3;
-$animation-duration: 7s;
+// $gradient-color-1: #cabd97;
+// $gradient-color-2: #a1c9d3;
+// $animation-duration: 7s;
 
-@keyframes gradientAnimation {
-    0% {
-        background-position: 0% 50%;
-    }
+// @keyframes gradientAnimation {
+//     0% {
+//         background-position: 0% 50%;
+//     }
 
-    50% {
-        background-position: 100% 50%;
-    }
+//     50% {
+//         background-position: 100% 50%;
+//     }
 
-    100% {
-        background-position: 0% 50%;
-    }
-}
+//     100% {
+//         background-position: 0% 50%;
+//     }
+// }
 
-@keyframes headerFontAnimation {
-    0% {
-        color: white;
-    }
+// @keyframes headerFontAnimation {
+//     0% {
+//         color: white;
+//     }
 
-    50% {
-        color: #353535;
+//     50% {
+//         color: #353535;
 
-    }
+//     }
 
-    100% {
-        color: white;
-    }
-}
+//     100% {
+//         color: white;
+//     }
+// }
 
 
 .wrapper {
@@ -45,94 +45,104 @@ $animation-duration: 7s;
     top: 0;
     bottom: 0;
     background-color: rgb(255, 255, 255);
-    display: flex;
+    display: grid;
+    grid-template-rows: 3fr 8fr 1fr;
     justify-content: center;
-    align-items: center;
 
-    background: linear-gradient(to right, $gradient-color-1, $gradient-color-2);
-    background-size: 200% 200%;
-    animation: gradientAnimation $animation-duration infinite;
 
-    header {
-        text-align: center;
-        position: absolute;
-        top: 30px;
-        left: 0;
-        right: 0;
-        letter-spacing: 40px;
-        font-family: $font-node-nav-header;
-        font-size: 1.3rem;
+    // background: linear-gradient(to right, $gradient-color-1, $gradient-color-2);
+    // background-size: 200% 200%;
+    // animation: gradientAnimation $animation-duration infinite;
 
-        animation: headerFontAnimation 7s infinite;
-
+    .logo_wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
     }
 
-    form {
-        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-        background-image: linear-gradient(white, rgb(170, 195, 209));
-        padding: 20px 40px 100px 40px;
-        position: relative;
-        font-family: $font-node-nav-header;
-        border-radius: 5px;
+    .cocoon_logo_wrapper {
+        display: flex;
+        justify-self: center;
+        width: 300px;
+    }
 
-        input {
-            padding: 10px;
-            font-size: 1rem;
+    .form_wrapper {
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        form {
+            box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+            background-image: linear-gradient(white, rgb(179, 209, 170));
+            padding: 20px 40px 100px 40px;
+            position: relative;
             font-family: $font-node-nav-header;
             border-radius: 5px;
-            border: 1px solid rgb(174, 196, 209);
+            width: 200px;
+            height: 150px;
 
-        }
-
-        label,
-        input {
-            display: block;
-        }
-
-        label {
-            text-align: center;
-            margin-bottom: 5px;
-            margin-top: 5px;
-            font-size: 1.3rem;
-            font-weight: bolder;
-            color: #797979;
-        }
-
-        .btn_wrapper {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-
-            display: flex;
-            justify-content: center;
-
-
-            button {
-                width: 100%;
-                height: 40px;
-                border: 0;
-                border-top: 1px solid #a1c9d3;
-                border-bottom-left-radius: 5px;
-                border-bottom-right-radius: 5px;
+            input {
+                padding: 10px;
+                font-size: 1rem;
                 font-family: $font-node-nav-header;
-                font-size: 1.5rem;
-                background-color: #a6cbd4;
-                font-weight: bolder;
-                transition: background-color 0.3s ease-in-out;
-
-                &:hover {
-                    background-color: #92c2ce;
-                }
-
-                &:active {
-                    background-color: #739ca7;
-                }
-
+                border-radius: 5px;
+                border: 1px solid rgb(174, 196, 209);
 
             }
 
+            label,
+            input {
+                display: block;
+            }
+
+            label {
+                text-align: center;
+                margin-bottom: 5px;
+                margin-top: 5px;
+                font-size: 1.3rem;
+                font-weight: bolder;
+                color: #363636;
+            }
+
+            .btn_wrapper {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+
+                display: flex;
+                justify-content: center;
+
+
+                button {
+                    width: 100%;
+                    height: 40px;
+                    border: 0;
+                    border-top: 1px solid #b9d3a1;
+                    border-bottom-left-radius: 5px;
+                    border-bottom-right-radius: 5px;
+                    font-family: $font-node-nav-header;
+                    font-size: 1.5rem;
+                    background-color: #aad4a6;
+                    font-weight: bolder;
+                    transition: background-color 0.3s ease-in-out;
+
+                    &:hover {
+                        background-color: #9bc298;
+                    }
+
+                    &:active {
+                        background-color: #84a581;
+                    }
+
+
+                }
+
+            }
         }
     }
+
+
 }
