--- a/src/components/Server/LeftPanel/LeftPanel.module.scss
+++ b/src/components/Server/LeftPanel/LeftPanel.module.scss
@@ -66,6 +66,19 @@
         }
       }
 
+      .draft_list_item_wrapper{
+        .folder_name{
+          padding-left: 10px;
+          font-family: $font-node-nav-header;
+          font-weight: bold;
+          color: $color-node-nav-container-header;
+         
+        }
+        border-bottom: 1px solid rgb(204, 204, 204);
+      }
+
+     
+
       .section_header {
         display: flex;
         align-items: center;
