--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -18,6 +18,7 @@ $color-list-label: #727272;
 //icons colors
 $color-node-nav-icon: rgb(35, 124, 175);
 $color-node-nav-icon-light: "white";
+$color-warning-message: rgb(173, 126, 38);
 
 //--SHADOWS--
 $shadow-node-nav-container: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
