refactored update flow modal, changed font

--- a/src/style/fonts.scss
+++ b/src/style/fonts.scss
@@ -3,3 +3,9 @@
     src: url('../fonts/Rajdhani-Regular.ttf');
     /* Add other font properties if needed */
 }
+
+@font-face {
+    font-family: 'Richard';
+    src: url('../fonts/Inter-Regular.ttf');
+    /* Add other font properties if needed */
+}
