--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -27,8 +27,9 @@ $shadow-node-nav-btn: none;
 $shadow-inset: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 
 //--FONTS--
-$font-node-nav-list: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-$font-node-nav-header: 'BlockMenuHeader';
+// $font-node-nav-list: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+$font-node-nav-list: 'Richard';
+$font-node-nav-header: 'Richard';
 
 
 //--BREAKPOINTS--
