--- a/src/components/Designer/RightPanel/Properties/CustomProperties/AddCustomProperty/AddCustomProperty.module.scss
+++ b/src/components/Designer/RightPanel/Properties/CustomProperties/AddCustomProperty/AddCustomProperty.module.scss
@@ -25,13 +25,16 @@
             label {
                 padding-left: 10px;
                 margin-right: 20px;
-                font-weight: bold;
+                font-size: 0.9rem;
             }
 
             input {
                 outline: none;
                 border: 0;
+
             }
+
+
         }
 
         .param_value {
