--- a/src/style/fonts.scss
+++ b/src/style/fonts.scss
@@ -9,3 +9,9 @@
     src: url('../fonts/Inter-Regular.ttf');
     /* Add other font properties if needed */
 }
+
+@font-face {
+    font-family: 'Inter';
+    src: url('../fonts/Inter-VariableFont_slnt\,wght.ttf');
+    /* Add other font properties if needed */
+}
