--- a/src/components/Modals/ModalWindow.module.scss
+++ b/src/components/Modals/ModalWindow.module.scss
@@ -26,12 +26,16 @@
     min-width: 300px;
     min-height: 100px;
     font-family: $font-node-nav-list;
+    color: $color-font-main;
+
 }
 
 
 .modal_header {
     text-align: center;
-    font-weight: bold;
+    font-weight: $font-weight-bolder;
+
+
     margin-bottom: 20px;
 
 }
@@ -41,12 +45,14 @@
     margin-bottom: 20px;
     display: flex;
     justify-content: center;
+    font-size: 0.9rem;
 
 
     span {
         font-weight: bolder;
         margin-left: 5px;
         margin-right: 5px;
+
     }
 
     input[type="text"] {
@@ -98,6 +104,7 @@
 
         label {
             margin-right: 5px;
+            font-size: 0.9rem;
         }
 
         input {
