--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -13,6 +13,7 @@ $bg-delete-btn: rgb(230, 56, 56);
 $color-node-nav-container-header: rgb(114, 114, 114);
 $color-node-nav-btn: rgb(31, 31, 31);
 $color-list-border: rgb(238, 238, 238);
+$color-list-border-darker: rgb(221, 221, 221);
 $color-list-label: #727272;
 $color-font-main: rgb(53, 53, 53);
 
