--- a/src/components/Server/CenterPanel/Security/UsersTable/UserModal/EditUserModal.module.scss
+++ b/src/components/Server/CenterPanel/Security/UsersTable/UserModal/EditUserModal.module.scss
@@ -67,6 +67,7 @@
             .text_values_item {
                 display: grid;
                 grid-template-columns: 4fr 8fr;
+
             }
 
             label,
@@ -81,6 +82,19 @@
                 border: 1px solid $color-list-border-darker;
                 padding-left: 5px;
 
+            }
+
+
+            .generate_password_btn {
+                position: absolute;
+                top: 117px;
+                right: 12px;
+
+                button {
+                    @include blue_btn;
+                    font-size: 0.6rem;
+                    padding: 3px;
+                }
             }
         }
 
